# rules-dat-xray-flake

./: .gitignore  flake.nix  geoip.nix  geosite.nix  test.sh  xray.nix  xray_sub.nix
.github/workflows/: nix-update.yml
xray_sub/: Cargo.toml
xray_sub/src/: main.rs
