[package]
name = "xray_sub"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["blocking", "json"] }
base64 = "0.21"
regex = "1.10"
clap = { version = "4.3", features = ["derive"] }
url = "2.4"
anyhow = "1.0"
percent-encoding = "2.3"
